--- a/popup/index.html
+++ b/popup/index.html
@@ -9,10 +9,15 @@
 </head>
 
 <body>
+    <div id="input_content">
+        <label>Page No.</label>
+        <input type="number" placeholder="Enter page no. to access" name="url_form">
+        <button id="sub_button">Submit Page</button>
+    </div>
     <div id="content" style="display: none;height: 0;width: 0"></div>
-
+    <h2 class="big">GEEKS FOR GEEKS</h2>
     <div id="data">
-        <h2 class="big">GEEKS FOR GEEKS</h2>
+
     </div>
 </body>
 
