Some UI fixes and Error Handling

--- a/popup/index.html
+++ b/popup/index.html
@@ -9,16 +9,24 @@
 </head>
 
 <body>
+    <header>
+        <h2 class="big">GEEKS FOR GEEKS</h2>
+    </header>
+    <section>
     <div id="input_content">
-        <label>Page No.</label>
-        <input type="number" placeholder="Enter page no. to access" name="url_form">
-        <button id="sub_button">Submit Page</button>
+        <label>Enter a page number:</label>
+        <input type="number" name="url_form">
+        <button id="sub_button" class="button">Search</button>
     </div>
     <div id="content" style="display: none;height: 0;width: 0"></div>
-    <h2 class="big">GEEKS FOR GEEKS</h2>
     <div id="data">
 
     </div>
+    </section>
+    <hr>
+    <footer>
+        <p>&copy; Content owned by <a href="http://www.geeksforgeeks.com">GeeksForGeeks</a></p>
+    </footer>
 </body>
 
 </html>
