--- a/popup/index.html
+++ b/popup/index.html
@@ -3,29 +3,37 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="./../content_scripts/jquery-3.1.1.js"></script>
+    <script src="./../content_scripts/jquery.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
+    <script type="text/javascript" src="./../content_scripts/foundation.js"></script>
     <link rel="stylesheet" href="styles.css"/>
     <script src="script.js"></script>
 </head>
 
 <body>
     <header>
-        <h2 class="big">GEEKS FOR GEEKS</h2>
+        <h1>TOP GEEKS FOR GEEKS ARTICLES</h1>
     </header>
     <section>
-    <div id="input_content">
-        <label>Enter a page number:</label>
-        <input type="number" name="url_form">
-        <button id="sub_button" class="button">Search</button>
+    <div id="input_content" class="row">
+        <div class="small-8 columns">
+            <input type="number" name="url_form" placeholder="Enter the page number to get data">
+        </div>
+        <div class="small-4 columns">
+            <button id="sub_button" class="button large success">Search</button>
+        </div>
     </div>
     <div id="content" style="display: none;height: 0;width: 0"></div>
+    <div id="preloader">
+        <img src='./../loader.gif' alt="Preloader GIF">
+    </div>
     <div id="data">
 
     </div>
     </section>
     <hr>
     <footer>
-        <p>&copy; Content owned by <a href="http://www.geeksforgeeks.com">GeeksForGeeks</a></p>
+        <p>&copy; Content taken from <a href="http://www.geeksforgeeks.com">GeeksForGeeks</a></p>
     </footer>
 </body>
 
