--- a/popup/index.html
+++ b/popup/index.html
@@ -17,7 +17,7 @@
     <section>
     <div id="input_content" class="row">
         <div class="small-8 columns">
-            <input type="number" name="url_form" placeholder="Enter the page number to get data">
+            <input type="number" name="url_form" placeholder="Enter the page number to get data" min="1">
         </div>
         <div class="small-4 columns">
             <button id="sub_button" class="button large success">Search</button>
