--- a/popup/index.html
+++ b/popup/index.html
@@ -17,7 +17,7 @@
     <section>
     <div id="input_content" class="row">
         <div class="small-8 columns">
-            <input type="number" name="url_form" placeholder="Enter the page number to get data" min="1">
+            <input type="number" name="url_form" id="url_form" placeholder="Enter the page number to get data" min="1">
         </div>
         <div class="small-4 columns">
             <button id="sub_button" class="button large success">Search</button>
@@ -29,6 +29,9 @@
     </div>
     <div id="data">
 
+    </div>
+    <div id="sorryImage">
+        <img src='./../icons/large.jpg' alt="Sad Tom Image">
     </div>
     </section>
     <hr>
